# displayprober-win-cpp

./: .gitattributes  .gitignore  .gitmodules  .prettierrc.json  README.md  build.ps1  clean.ps1  deps.ps1  displayprober-win-cpp.code-workspace  dump.ps1  generate.ps1  run.ps1  test.ps1  version.ps1
.github/actions/azure-sign/: action.yml
.github/actions/build-and-test/: action.yml
.github/scripts/: collect-artifacts-and-zip.ps1  configure-and-build.ps1  determine-version-tag.ps1
.github/workflows/: ci.yml  release.yml
docs/: nomenclature.md
scripts/: DotNetRuntimeVer.cs  install_admin.ps1  install_user.ps1  power_utils.ps1
src/cpp/: BasicMonitorInfo.cpp  BasicMonitorInfo.h  CLI.cpp  CMakeLists.txt  CMakePresets.json  CommonTypes.h  DisplayProber.manifest  DisplayProberInternal.cpp  DisplayProberInternal.h  DisplayProberLib.cpp  DisplayProberLib.h  DisplayProberVersion.rc.in  DxgiOutputDevice.cpp  DxgiOutputDevice.h  EdidBytes.cpp  EdidBytes.h  GdiDisplayConfig.cpp  GdiDisplayConfig.h  GdiPolyfills.h  JsonUtils.cpp  JsonUtils.h  StringUtils.cpp  StringUtils.h  SysUtils.cpp  SysUtils.h  WmiQueries.cpp  WmiQueries.h  WmiQueriesInternal.cpp  WmiQueriesInternal.h  unique_ids.md
src/cpp/gencode/: acd-json.hpp
src/cpp/tests/: CMakeLists.txt  stub_SysUtils.cpp  test_DisplayProberInternal.cpp  test_JsonUtils.cpp  test_StringUtils.cpp  test_WmiQueriesInternal.cpp
src/ts/: json-to-cpp.ts  package-lock.json  package.json  probe.ts  ts-to-json.ts
src/ts/schemas/: displayprober-win-cpp.schema.json
src/ts/types/: displayprober-win-cpp.types.ts
